Hold all search info in the search bar

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,7 @@
 llyfrgell_sources = [
   'main.c',
   'llyfr-application.c',
+  'llyfr-search-bar.c',
   'llyfr-search-context.c',
   'llyfr-window.c',
 ]
