--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,6 @@
 sources = [
   'models/llyfr-search-context.c',
+  'models/llyfr-search-result.c',
   'main.c',
   'llyfr-application.c',
   'llyfr-search-bar.c',
@@ -9,6 +10,7 @@ sources = [
 deps = [
   dependency('gio-2.0', version: '>= 2.50'),
   dependency('gtk4', version: '>= 4.0'),
+  dependency('json-glib-1.0', version: '>= 1.2.0'),
 ]
 
 includes = include_directories(
