Refactor to use an object to carry line based info
Introducing `LlyfrSearchMatch` which will contain all the information
required to render a line in a `LlyfrSearchResultView`.

Also starting to get a better handle on memory management

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,6 @@
 sources = [
   'models/llyfr-search-context.c',
+  'models/llyfr-search-match.c',
   'models/llyfr-search-result.c',
   'main.c',
   'llyfr-application.c',
